<resources>
    <string name="app_name">Attentip Team Charmander</string>
    <string name="buendia">Buen día Carlos,</string>
    <string name="quehacer">¿Qué deseas realizar hoy?</string>
    <string name="tipoPausa">Tipo de pausa activa:</string>
    <string name="fisica">Física</string>
    <string name="mental">Mental</string>
    <string name="aleatorio">Aleatorio</string>
    <string name="time1">1 min</string>
    <string name="time3">3 min</string>
    <string name="time5">5 min</string>
    <string name="time10">10 min</string>
    <string name="welcome">¡Bienvenido a Attentip!</string>
    <string name="pulpi">Yo soy Pulpi, tu acompañante de Pausas Activas</string>
    <string name="getname">¿Cuál es tu nombre?</string>
    <string name="examplename">Carlos</string>
    <string name="progress">Progreso</string>
    <string name="continuar">Continuar</string>
    <string name="notifica_dscrp">Notificaciones del sistema</string>
    <string name="diario_de_emociones">Diario de emociones</string>
    <string name="exercise_dscrp">Área de entrenamiento</string>
    <string name="logros_dscrp">Logros registrados en la plataforma</string>
    <string name="home">Inicio</string>
    <string name="lunes">Lun</string>
    <string name="martes">Mar</string>
    <string name="miercoles">Mie</string>
    <string name="jueves">Jue</string>
    <string name="viernes">Vie</string>
    <string name="sabado">Sab</string>
    <string name="domingo">Dom</string>
    <string name="hi">Hola Carlos,</string>
    <string name="howufeel">¿Cómo te sientes?</string>
    <string name="save">Guardar</string>
    <string name="estadoAnimo">Estados de ánimo</string>
    <string name="hey">¡Hey Carlos! Hecha un vistazo a tus estados de ánimo de esta semana.</string>
    <string name="tu_estado_de_nimo">Tu estado de ánimo</string>
    <string name="respiraci_n">Respiración</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Carlos Martínez</string>
    <string name="concept">Son breves descansos durante la jornada laboral que sirven para recuperar energía, mejorar el desempeño y eficiencia en el trabajo, a través de diferentes técnicas y ejercicios que ayudan a reducir la fatiga laboral, trastornos osteomusculares y prevenir el estrés.</string>
    <string name="QuestionProfile">¿Qué son las Pausas Activas?</string>
    <string name="excercise_name">Flexibilidad de cuello</string>
    <string name="tiempo">1 Min</string>
    <string name="dona_a_pulpi">Dona a Pulpi</string>
    <string name="finalizar">Finalizar</string>
    <string name="Alarm">Alarma de Pausa Activa</string>
    <string name="horario">Horario de Pausa Activa</string>
    <string name="horarioej">Lunes, Jueves y Viernes</string>
    <string name="horariohora">10:00 am</string>
    <string name="cancelar">Cancelar</string>
</resources>