<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeExercise">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/appbar"
            app:navigationIcon="@drawable/ic_menu_24"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center"
            android:background="@color/azul_fondo_dark"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buendia"
                style="@style/AppTheme.Base.Title2"
                app:layout_constraintBottom_toTopOf="@+id/text2"
                />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quehacer"
                style="@style/AppTheme.Base.Title1"
                app:layout_constraintBottom_toBottomOf="@+id/welcome"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/logoapp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.27"
            />

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipoPausa"
            android:layout_marginTop="8dp"
            style="@style/AppTheme.Base.TextP"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:gravity="center"
            app:layout_constraintVertical_bias="0.9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text3">

        <androidx.cardview.widget.CardView
            android:layout_width="280dp"
            android:layout_height="107dp"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="15dp"
            style="@style/Widget.MaterialComponents.CardView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/fisica"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fisica"
                    style="@style/AppTheme.Base.CardText"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="280dp"
                android:layout_height="107dp"
                android:layout_margin="8dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="15dp"
                style="@style/Widget.MaterialComponents.CardView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mental1"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/mental"
                        style="@style/AppTheme.Base.CardText"

                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="280dp"
                android:layout_height="107dp"
                android:layout_margin="8dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="15dp"
                style="@style/Widget.MaterialComponents.CardView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/aleatorio1"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/aleatorio"
                        style="@style/AppTheme.Base.CardText"

                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>