<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeExerciseFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ly1_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ly2_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/azul_fondo_dark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/buendia"
                style="@style/AppTheme.Base.Title2"
                />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quehacer"
                style="@style/AppTheme.Base.Title1"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logoapp"
            app:layout_constraintVertical_bias="0.24"
            app:layout_constraintBottom_toTopOf="@id/ly2_logo"
            app:layout_constraintTop_toTopOf="@id/ly1_logo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipoPausa"
            android:layout_marginTop="8dp"
            style="@style/AppTheme.Base.TextP"
            app:layout_constraintBottom_toTopOf="@id/line2"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <LinearLayout
            android:id="@+id/line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="265dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="15dp"
                style="@style/Widget.MaterialComponents.CardView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/fisica"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/fisica"
                        style="@style/AppTheme.Base.CardText"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="265dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="15dp"
                style="@style/Widget.MaterialComponents.CardView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mental1"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/mental"
                        style="@style/AppTheme.Base.CardText"

                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="265dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="15dp"
                style="@style/Widget.MaterialComponents.CardView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/aleatorio1"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/aleatorio"
                        style="@style/AppTheme.Base.CardText"

                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>