<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#262A40"
    tools:context=".OnBoarding">

    <ImageView
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center"
        android:background="@color/azul_fondo_dark"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="35mm"
        android:src="@drawable/bannerapp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        style="@style/AppTheme.Base.FistText_Black"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/text1">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/chat"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            app:cardCornerRadius="20dp">

            <TextView
                style="@style/AppTheme.Base.TextP"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="#F5B2D5"
                android:padding="16dp"
                android:text="@string/pulpi"
                android:textColor="@color/black" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/whatsname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Base.Title2_Black"
            android:text="@string/getname"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_marginTop="35dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/AppTheme.Base.Title2_Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            app:cornerRadius="10dp"
            android:textSize="20sp"
            android:text="@string/continuar"
            android:textAllCaps="false"
            android:gravity="center"
            android:backgroundTint="@color/azul_fondo_dark"
            android:layout_marginTop="35dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59">

        <ImageView
            android:id="@+id/pulpi"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/logoapp" />

    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>