<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_logo"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gluser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/azul_fondo_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineP"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/blancoOpaco">

        <TextView
            android:id="@+id/usernameP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:padding="8dp"
            android:layout_marginTop="@id/logoUser"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:id="@+id/lineDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent">

            <ImageView
                android:id="@+id/imgCS"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/date_range_black_18dp"
                />

            <TextView
                android:id="@+id/startdate"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:background="@color/fondo_opaco"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/azul_sec_dark"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:gravity="center_horizontal"
                    android:padding="15dp"
                    android:text="@string/concept"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:text="@string/QuestionProfile"
                android:textAlignment="center"
                android:textColor="@color/pink_logo"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageView
        android:id="@+id/logoUser"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:src="@drawable/user"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="200dp"
        app:layout_constraintVertical_bias="0.24"
        app:layout_constraintBottom_toTopOf="@id/gluser"
        app:layout_constraintTop_toTopOf="@id/gluser"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>